kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-app
  template:
    metadata:
      labels:
        app: bookstore-app
        tier: backend
        track: stable
    spec:
      containers:
        - name: bookstore-app
          image: mwyssy/bookstore-backend-api:1.0
          ports:
            - name: http
              containerPort: 5000
