kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-app
  template:
    metadata:
      labels:
        app: bookstore-app
    spec:
      containers:
        - name: bookstore-app
          image: mwyssy/bookstore-frontend-api:1.1
          ports:
            - containerPort: 80
