kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-backend
spec:
  selector:
    app: bookstore-app
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5000
  type: ClusterIP
